Fix for bullet alignment and carousel

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -37,8 +37,7 @@
     font-family: 'Glyphicons Halflings';
     font-size: 20px;
     float: left;
-    margin-left: -17px;
-	margin-right: 10px;
+    margin-left: -30px;
 	color: #f4511e;
 }
 .authors:before {
@@ -96,9 +95,8 @@ padding-right:15%;
     line-height: 1.375em;
     font-weight: 400;
     font-style: italic;
-    margin: 50px 0;
-	margin-right:15%;
-	margin-left:15%;
+	margin-right:10%;
+	margin-left:10%;
 
 }
 
